# tuning-box

./: .gitignore  .gitreview  HACKING.rst  MAINTAINERS  README.rst  bindep.txt  other-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/records/02-api-update/: record.json  script
examples/etc/tuningbox/: tuningbox_config.py  uwsgi_tuningbox.yaml
examples/lib/systemd/system/: tuningbox.service
specs/: fuel-nailgun-configdb.spec  tuning-box.spec
tuning_box/: __init__.py  app.py  client.py  converters.py  db.py  errors.py  fuelclient.py  hiera_config.py  logger.py  migration.py  nailgun.py  test_app.py  uwsgi_app.py
tuning_box/cli/: base.py  components.py  environments.py  errors.py  get.py  hierarchy_levels.py  resource_definitions.py  resources.py  set.py
tuning_box/middleware/: keystone.py
tuning_box/migrations/versions/: 0c586adad733_cascade_deletion.py  2df74ddf3979_cascade_deletion.py  9ae15c85fa92_remove_fake_root_hierarchy_level_values.py  a86472389a70_remove_hierarchy_for_level_values.py  adf671eddeb4_level_cascade_deletion.py
tuning_box/resources/: components.py  environments.py  resources.py
tuning_box/schemas/v1/: component.json
tuning_box/tests/: base.py  test_app.py  test_cli.py  test_db.py  test_hiera_config.py
tuning_box/tests/cli/: __init__.py  test_components.py  test_environments.py  test_help.py  test_hierarchy_levels.py  test_resource_definitions.py  test_resources.py
tuning_box/tests/resources/: test_components.py  test_environments.py  test_resources.py
uwsgi/: tuningbox_uwsgi_config.example.yaml
