[metadata]
name = tuning_box
summary = Tuning Box - configuration storage for your clouds
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tuning_box

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tuning_box/locale
domain = tuning_box

[update_catalog]
domain = tuning_box
output_dir = tuning_box/locale
input_file = tuning_box/locale/tuning_box.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tuning_box/locale/tuning_box.pot

[entry_points]
nailgun.extensions =
    tuning_box = tuning_box.nailgun:Extension
tuning_box.cli =
    get = tuning_box.cli.resources:Get
    set = tuning_box.cli.resources:Set
    del = tuning_box.cli.resources:Delete
    override = tuning_box.cli.resources:Override
    del_override = tuning_box.cli.resources:DeleteOverride
    env_create = tuning_box.cli.environments:CreateEnvironment
    env_list = tuning_box.cli.environments:ListEnvironments
    env_show = tuning_box.cli.environments:ShowEnvironment
    env_delete = tuning_box.cli.environments:DeleteEnvironment
    env_update = tuning_box.cli.environments:UpdateEnvironment
    comp_create = tuning_box.cli.components:CreateComponent
    comp_list = tuning_box.cli.components:ListComponents
    comp_show = tuning_box.cli.components:ShowComponent
    comp_delete = tuning_box.cli.components:DeleteComponent
    comp_update = tuning_box.cli.components:UpdateComponent
    def_create = tuning_box.cli.resource_definitions:CreateResourceDefinition
    def_list = tuning_box.cli.resource_definitions:ListResourceDefinitions
    def_show = tuning_box.cli.resource_definitions:ShowResourceDefinition
    def_delete = tuning_box.cli.resource_definitions:DeleteResourceDefinition
    def_update = tuning_box.cli.resource_definitions:UpdateResourceDefinition
fuelclient =
    config_get = tuning_box.fuelclient:Get
    config_set = tuning_box.fuelclient:Set
    config_del = tuning_box.fuelclient:Delete
    config_override = tuning_box.fuelclient:Override
    config_del_override = tuning_box.fuelclient:DeleteOverride
    config_env_create = tuning_box.fuelclient:CreateEnvironment
    config_env_list = tuning_box.fuelclient:ListEnvironments
    config_env_show = tuning_box.fuelclient:ShowEnvironment
    config_env_delete = tuning_box.fuelclient:DeleteEnvironment
    config_env_update = tuning_box.fuelclient:UpdateEnvironment
    config_comp_create = tuning_box.fuelclient:CreateComponent
    config_comp_list = tuning_box.fuelclient:ListComponents
    config_comp_show = tuning_box.fuelclient:ShowComponent
    config_comp_delete = tuning_box.fuelclient:DeleteComponent
    config_comp_update = tuning_box.fuelclient:UpdateComponent
    config_def_create = tuning_box.fuelclient:CreateResourceDefinition
    config_def_list = tuning_box.fuelclient:ListResourceDefinitions
    config_def_show = tuning_box.fuelclient:ShowResourceDefinition
    config_def_delete = tuning_box.fuelclient:DeleteResourceDefinition
    config_def_update = tuning_box.fuelclient:UpdateResourceDefinition
console_scripts =
    tuningbox_db_upgrade = tuning_box.migration:upgrade
    tuningbox_db_downgrade = tuning_box.migration:downgrade
